ply_experiments/for_loop_detect/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    FOR
    NEWLINE

Grammar

Rule 0     S' -> statement
Rule 1     statement -> var_assign SEMICOLON
Rule 2     statement -> expression SEMICOLON
Rule 3     statement -> expression_unary SEMICOLON
Rule 4     statement -> while_loop
Rule 5     statement -> declare_statement
Rule 6     statement -> empty
Rule 7     statement_multiple -> statement
Rule 8     while_loop -> WHILE condition block
Rule 9     while_loop -> WHILE condition statement
Rule 10    condition -> L_PAREN expression relop expression R_PAREN
Rule 11    relop -> LE
Rule 12    relop -> LT
Rule 13    relop -> GE
Rule 14    relop -> GT
Rule 15    relop -> NE
Rule 16    relop -> EQ
Rule 17    block -> L_FLOWERBRACE statement_multiple R_FLOWERBRACE
Rule 18    statement_multiple -> statement_multiple statement
Rule 19    declare_statement -> TYPE ID SEMICOLON
Rule 20    declare_statement -> TYPE var_assign SEMICOLON
Rule 21    var_assign -> ID ASSIGN expression
Rule 22    empty -> <empty>
Rule 23    expression -> expression MULTIPLY expression
Rule 24    expression -> expression DIVIDE expression
Rule 25    expression -> expression PLUS expression
Rule 26    expression -> expression MINUS expression
Rule 27    expression -> expression L_SHIFT expression
Rule 28    expression -> expression R_SHIFT expression
Rule 29    expression -> expression MOD expression
Rule 30    expression -> expression XOR expression
Rule 31    expression -> expression AND expression
Rule 32    expression -> expression OR expression
Rule 33    expression_unary -> post
Rule 34    expression_unary -> pre
Rule 35    post -> ID PLUS_PLUS
Rule 36    post -> ID MINUS_MINUS
Rule 37    pre -> PLUS_PLUS ID
Rule 38    pre -> MINUS_MINUS ID
Rule 39    expression -> INT
Rule 40    expression -> FLOAT
Rule 41    expression -> ID

Terminals, with rules where they appear

AND                  : 31
ASSIGN               : 21
DIVIDE               : 24
EQ                   : 16
FLOAT                : 40
FOR                  : 
GE                   : 13
GT                   : 14
ID                   : 19 21 35 36 37 38 41
INT                  : 39
LE                   : 11
LT                   : 12
L_FLOWERBRACE        : 17
L_PAREN              : 10
L_SHIFT              : 27
MINUS                : 26
MINUS_MINUS          : 36 38
MOD                  : 29
MULTIPLY             : 23
NE                   : 15
NEWLINE              : 
OR                   : 32
PLUS                 : 25
PLUS_PLUS            : 35 37
R_FLOWERBRACE        : 17
R_PAREN              : 10
R_SHIFT              : 28
SEMICOLON            : 1 2 3 19 20
TYPE                 : 19 20
WHILE                : 8 9
XOR                  : 30
error                : 

Nonterminals, with rules where they appear

block                : 8
condition            : 8 9
declare_statement    : 5
empty                : 6
expression           : 2 10 10 21 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32
expression_unary     : 3
post                 : 33
pre                  : 34
relop                : 10
statement            : 7 9 18 0
statement_multiple   : 17 18
var_assign           : 1 20
while_loop           : 4

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . var_assign SEMICOLON
    (2) statement -> . expression SEMICOLON
    (3) statement -> . expression_unary SEMICOLON
    (4) statement -> . while_loop
    (5) statement -> . declare_statement
    (6) statement -> . empty
    (21) var_assign -> . ID ASSIGN expression
    (23) expression -> . expression MULTIPLY expression
    (24) expression -> . expression DIVIDE expression
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression MINUS expression
    (27) expression -> . expression L_SHIFT expression
    (28) expression -> . expression R_SHIFT expression
    (29) expression -> . expression MOD expression
    (30) expression -> . expression XOR expression
    (31) expression -> . expression AND expression
    (32) expression -> . expression OR expression
    (39) expression -> . INT
    (40) expression -> . FLOAT
    (41) expression -> . ID
    (33) expression_unary -> . post
    (34) expression_unary -> . pre
    (8) while_loop -> . WHILE condition block
    (9) while_loop -> . WHILE condition statement
    (19) declare_statement -> . TYPE ID SEMICOLON
    (20) declare_statement -> . TYPE var_assign SEMICOLON
    (22) empty -> .
    (35) post -> . ID PLUS_PLUS
    (36) post -> . ID MINUS_MINUS
    (37) pre -> . PLUS_PLUS ID
    (38) pre -> . MINUS_MINUS ID

    ID              shift and go to state 8
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    WHILE           shift and go to state 13
    TYPE            shift and go to state 14
    $end            reduce using rule 22 (empty -> .)
    PLUS_PLUS       shift and go to state 15
    MINUS_MINUS     shift and go to state 16

    statement                      shift and go to state 1
    var_assign                     shift and go to state 2
    expression                     shift and go to state 3
    expression_unary               shift and go to state 4
    while_loop                     shift and go to state 5
    declare_statement              shift and go to state 6
    empty                          shift and go to state 7
    post                           shift and go to state 11
    pre                            shift and go to state 12

state 1

    (0) S' -> statement .



state 2

    (1) statement -> var_assign . SEMICOLON

    SEMICOLON       shift and go to state 17


state 3

    (2) statement -> expression . SEMICOLON
    (23) expression -> expression . MULTIPLY expression
    (24) expression -> expression . DIVIDE expression
    (25) expression -> expression . PLUS expression
    (26) expression -> expression . MINUS expression
    (27) expression -> expression . L_SHIFT expression
    (28) expression -> expression . R_SHIFT expression
    (29) expression -> expression . MOD expression
    (30) expression -> expression . XOR expression
    (31) expression -> expression . AND expression
    (32) expression -> expression . OR expression

    SEMICOLON       shift and go to state 18
    MULTIPLY        shift and go to state 19
    DIVIDE          shift and go to state 20
    PLUS            shift and go to state 21
    MINUS           shift and go to state 22
    L_SHIFT         shift and go to state 23
    R_SHIFT         shift and go to state 24
    MOD             shift and go to state 25
    XOR             shift and go to state 26
    AND             shift and go to state 27
    OR              shift and go to state 28


state 4

    (3) statement -> expression_unary . SEMICOLON

    SEMICOLON       shift and go to state 29


state 5

    (4) statement -> while_loop .

    $end            reduce using rule 4 (statement -> while_loop .)
    R_FLOWERBRACE   reduce using rule 4 (statement -> while_loop .)
    ID              reduce using rule 4 (statement -> while_loop .)
    INT             reduce using rule 4 (statement -> while_loop .)
    FLOAT           reduce using rule 4 (statement -> while_loop .)
    WHILE           reduce using rule 4 (statement -> while_loop .)
    TYPE            reduce using rule 4 (statement -> while_loop .)
    PLUS_PLUS       reduce using rule 4 (statement -> while_loop .)
    MINUS_MINUS     reduce using rule 4 (statement -> while_loop .)


state 6

    (5) statement -> declare_statement .

    $end            reduce using rule 5 (statement -> declare_statement .)
    R_FLOWERBRACE   reduce using rule 5 (statement -> declare_statement .)
    ID              reduce using rule 5 (statement -> declare_statement .)
    INT             reduce using rule 5 (statement -> declare_statement .)
    FLOAT           reduce using rule 5 (statement -> declare_statement .)
    WHILE           reduce using rule 5 (statement -> declare_statement .)
    TYPE            reduce using rule 5 (statement -> declare_statement .)
    PLUS_PLUS       reduce using rule 5 (statement -> declare_statement .)
    MINUS_MINUS     reduce using rule 5 (statement -> declare_statement .)


state 7

    (6) statement -> empty .

    $end            reduce using rule 6 (statement -> empty .)
    R_FLOWERBRACE   reduce using rule 6 (statement -> empty .)
    ID              reduce using rule 6 (statement -> empty .)
    INT             reduce using rule 6 (statement -> empty .)
    FLOAT           reduce using rule 6 (statement -> empty .)
    WHILE           reduce using rule 6 (statement -> empty .)
    TYPE            reduce using rule 6 (statement -> empty .)
    PLUS_PLUS       reduce using rule 6 (statement -> empty .)
    MINUS_MINUS     reduce using rule 6 (statement -> empty .)


state 8

    (21) var_assign -> ID . ASSIGN expression
    (41) expression -> ID .
    (35) post -> ID . PLUS_PLUS
    (36) post -> ID . MINUS_MINUS

    ASSIGN          shift and go to state 30
    SEMICOLON       reduce using rule 41 (expression -> ID .)
    MULTIPLY        reduce using rule 41 (expression -> ID .)
    DIVIDE          reduce using rule 41 (expression -> ID .)
    PLUS            reduce using rule 41 (expression -> ID .)
    MINUS           reduce using rule 41 (expression -> ID .)
    L_SHIFT         reduce using rule 41 (expression -> ID .)
    R_SHIFT         reduce using rule 41 (expression -> ID .)
    MOD             reduce using rule 41 (expression -> ID .)
    XOR             reduce using rule 41 (expression -> ID .)
    AND             reduce using rule 41 (expression -> ID .)
    OR              reduce using rule 41 (expression -> ID .)
    PLUS_PLUS       shift and go to state 31
    MINUS_MINUS     shift and go to state 32


state 9

    (39) expression -> INT .

    SEMICOLON       reduce using rule 39 (expression -> INT .)
    MULTIPLY        reduce using rule 39 (expression -> INT .)
    DIVIDE          reduce using rule 39 (expression -> INT .)
    PLUS            reduce using rule 39 (expression -> INT .)
    MINUS           reduce using rule 39 (expression -> INT .)
    L_SHIFT         reduce using rule 39 (expression -> INT .)
    R_SHIFT         reduce using rule 39 (expression -> INT .)
    MOD             reduce using rule 39 (expression -> INT .)
    XOR             reduce using rule 39 (expression -> INT .)
    AND             reduce using rule 39 (expression -> INT .)
    OR              reduce using rule 39 (expression -> INT .)
    LE              reduce using rule 39 (expression -> INT .)
    LT              reduce using rule 39 (expression -> INT .)
    GE              reduce using rule 39 (expression -> INT .)
    GT              reduce using rule 39 (expression -> INT .)
    NE              reduce using rule 39 (expression -> INT .)
    EQ              reduce using rule 39 (expression -> INT .)
    R_PAREN         reduce using rule 39 (expression -> INT .)


state 10

    (40) expression -> FLOAT .

    SEMICOLON       reduce using rule 40 (expression -> FLOAT .)
    MULTIPLY        reduce using rule 40 (expression -> FLOAT .)
    DIVIDE          reduce using rule 40 (expression -> FLOAT .)
    PLUS            reduce using rule 40 (expression -> FLOAT .)
    MINUS           reduce using rule 40 (expression -> FLOAT .)
    L_SHIFT         reduce using rule 40 (expression -> FLOAT .)
    R_SHIFT         reduce using rule 40 (expression -> FLOAT .)
    MOD             reduce using rule 40 (expression -> FLOAT .)
    XOR             reduce using rule 40 (expression -> FLOAT .)
    AND             reduce using rule 40 (expression -> FLOAT .)
    OR              reduce using rule 40 (expression -> FLOAT .)
    LE              reduce using rule 40 (expression -> FLOAT .)
    LT              reduce using rule 40 (expression -> FLOAT .)
    GE              reduce using rule 40 (expression -> FLOAT .)
    GT              reduce using rule 40 (expression -> FLOAT .)
    NE              reduce using rule 40 (expression -> FLOAT .)
    EQ              reduce using rule 40 (expression -> FLOAT .)
    R_PAREN         reduce using rule 40 (expression -> FLOAT .)


state 11

    (33) expression_unary -> post .

    SEMICOLON       reduce using rule 33 (expression_unary -> post .)


state 12

    (34) expression_unary -> pre .

    SEMICOLON       reduce using rule 34 (expression_unary -> pre .)


state 13

    (8) while_loop -> WHILE . condition block
    (9) while_loop -> WHILE . condition statement
    (10) condition -> . L_PAREN expression relop expression R_PAREN

    L_PAREN         shift and go to state 34

    condition                      shift and go to state 33

state 14

    (19) declare_statement -> TYPE . ID SEMICOLON
    (20) declare_statement -> TYPE . var_assign SEMICOLON
    (21) var_assign -> . ID ASSIGN expression

    ID              shift and go to state 35

    var_assign                     shift and go to state 36

state 15

    (37) pre -> PLUS_PLUS . ID

    ID              shift and go to state 37


state 16

    (38) pre -> MINUS_MINUS . ID

    ID              shift and go to state 38


state 17

    (1) statement -> var_assign SEMICOLON .

    $end            reduce using rule 1 (statement -> var_assign SEMICOLON .)
    R_FLOWERBRACE   reduce using rule 1 (statement -> var_assign SEMICOLON .)
    ID              reduce using rule 1 (statement -> var_assign SEMICOLON .)
    INT             reduce using rule 1 (statement -> var_assign SEMICOLON .)
    FLOAT           reduce using rule 1 (statement -> var_assign SEMICOLON .)
    WHILE           reduce using rule 1 (statement -> var_assign SEMICOLON .)
    TYPE            reduce using rule 1 (statement -> var_assign SEMICOLON .)
    PLUS_PLUS       reduce using rule 1 (statement -> var_assign SEMICOLON .)
    MINUS_MINUS     reduce using rule 1 (statement -> var_assign SEMICOLON .)


state 18

    (2) statement -> expression SEMICOLON .

    $end            reduce using rule 2 (statement -> expression SEMICOLON .)
    R_FLOWERBRACE   reduce using rule 2 (statement -> expression SEMICOLON .)
    ID              reduce using rule 2 (statement -> expression SEMICOLON .)
    INT             reduce using rule 2 (statement -> expression SEMICOLON .)
    FLOAT           reduce using rule 2 (statement -> expression SEMICOLON .)
    WHILE           reduce using rule 2 (statement -> expression SEMICOLON .)
    TYPE            reduce using rule 2 (statement -> expression SEMICOLON .)
    PLUS_PLUS       reduce using rule 2 (statement -> expression SEMICOLON .)
    MINUS_MINUS     reduce using rule 2 (statement -> expression SEMICOLON .)


state 19

    (23) expression -> expression MULTIPLY . expression
    (23) expression -> . expression MULTIPLY expression
    (24) expression -> . expression DIVIDE expression
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression MINUS expression
    (27) expression -> . expression L_SHIFT expression
    (28) expression -> . expression R_SHIFT expression
    (29) expression -> . expression MOD expression
    (30) expression -> . expression XOR expression
    (31) expression -> . expression AND expression
    (32) expression -> . expression OR expression
    (39) expression -> . INT
    (40) expression -> . FLOAT
    (41) expression -> . ID

    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    ID              shift and go to state 40

    expression                     shift and go to state 39

state 20

    (24) expression -> expression DIVIDE . expression
    (23) expression -> . expression MULTIPLY expression
    (24) expression -> . expression DIVIDE expression
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression MINUS expression
    (27) expression -> . expression L_SHIFT expression
    (28) expression -> . expression R_SHIFT expression
    (29) expression -> . expression MOD expression
    (30) expression -> . expression XOR expression
    (31) expression -> . expression AND expression
    (32) expression -> . expression OR expression
    (39) expression -> . INT
    (40) expression -> . FLOAT
    (41) expression -> . ID

    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    ID              shift and go to state 40

    expression                     shift and go to state 41

state 21

    (25) expression -> expression PLUS . expression
    (23) expression -> . expression MULTIPLY expression
    (24) expression -> . expression DIVIDE expression
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression MINUS expression
    (27) expression -> . expression L_SHIFT expression
    (28) expression -> . expression R_SHIFT expression
    (29) expression -> . expression MOD expression
    (30) expression -> . expression XOR expression
    (31) expression -> . expression AND expression
    (32) expression -> . expression OR expression
    (39) expression -> . INT
    (40) expression -> . FLOAT
    (41) expression -> . ID

    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    ID              shift and go to state 40

    expression                     shift and go to state 42

state 22

    (26) expression -> expression MINUS . expression
    (23) expression -> . expression MULTIPLY expression
    (24) expression -> . expression DIVIDE expression
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression MINUS expression
    (27) expression -> . expression L_SHIFT expression
    (28) expression -> . expression R_SHIFT expression
    (29) expression -> . expression MOD expression
    (30) expression -> . expression XOR expression
    (31) expression -> . expression AND expression
    (32) expression -> . expression OR expression
    (39) expression -> . INT
    (40) expression -> . FLOAT
    (41) expression -> . ID

    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    ID              shift and go to state 40

    expression                     shift and go to state 43

state 23

    (27) expression -> expression L_SHIFT . expression
    (23) expression -> . expression MULTIPLY expression
    (24) expression -> . expression DIVIDE expression
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression MINUS expression
    (27) expression -> . expression L_SHIFT expression
    (28) expression -> . expression R_SHIFT expression
    (29) expression -> . expression MOD expression
    (30) expression -> . expression XOR expression
    (31) expression -> . expression AND expression
    (32) expression -> . expression OR expression
    (39) expression -> . INT
    (40) expression -> . FLOAT
    (41) expression -> . ID

    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    ID              shift and go to state 40

    expression                     shift and go to state 44

state 24

    (28) expression -> expression R_SHIFT . expression
    (23) expression -> . expression MULTIPLY expression
    (24) expression -> . expression DIVIDE expression
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression MINUS expression
    (27) expression -> . expression L_SHIFT expression
    (28) expression -> . expression R_SHIFT expression
    (29) expression -> . expression MOD expression
    (30) expression -> . expression XOR expression
    (31) expression -> . expression AND expression
    (32) expression -> . expression OR expression
    (39) expression -> . INT
    (40) expression -> . FLOAT
    (41) expression -> . ID

    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    ID              shift and go to state 40

    expression                     shift and go to state 45

state 25

    (29) expression -> expression MOD . expression
    (23) expression -> . expression MULTIPLY expression
    (24) expression -> . expression DIVIDE expression
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression MINUS expression
    (27) expression -> . expression L_SHIFT expression
    (28) expression -> . expression R_SHIFT expression
    (29) expression -> . expression MOD expression
    (30) expression -> . expression XOR expression
    (31) expression -> . expression AND expression
    (32) expression -> . expression OR expression
    (39) expression -> . INT
    (40) expression -> . FLOAT
    (41) expression -> . ID

    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    ID              shift and go to state 40

    expression                     shift and go to state 46

state 26

    (30) expression -> expression XOR . expression
    (23) expression -> . expression MULTIPLY expression
    (24) expression -> . expression DIVIDE expression
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression MINUS expression
    (27) expression -> . expression L_SHIFT expression
    (28) expression -> . expression R_SHIFT expression
    (29) expression -> . expression MOD expression
    (30) expression -> . expression XOR expression
    (31) expression -> . expression AND expression
    (32) expression -> . expression OR expression
    (39) expression -> . INT
    (40) expression -> . FLOAT
    (41) expression -> . ID

    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    ID              shift and go to state 40

    expression                     shift and go to state 47

state 27

    (31) expression -> expression AND . expression
    (23) expression -> . expression MULTIPLY expression
    (24) expression -> . expression DIVIDE expression
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression MINUS expression
    (27) expression -> . expression L_SHIFT expression
    (28) expression -> . expression R_SHIFT expression
    (29) expression -> . expression MOD expression
    (30) expression -> . expression XOR expression
    (31) expression -> . expression AND expression
    (32) expression -> . expression OR expression
    (39) expression -> . INT
    (40) expression -> . FLOAT
    (41) expression -> . ID

    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    ID              shift and go to state 40

    expression                     shift and go to state 48

state 28

    (32) expression -> expression OR . expression
    (23) expression -> . expression MULTIPLY expression
    (24) expression -> . expression DIVIDE expression
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression MINUS expression
    (27) expression -> . expression L_SHIFT expression
    (28) expression -> . expression R_SHIFT expression
    (29) expression -> . expression MOD expression
    (30) expression -> . expression XOR expression
    (31) expression -> . expression AND expression
    (32) expression -> . expression OR expression
    (39) expression -> . INT
    (40) expression -> . FLOAT
    (41) expression -> . ID

    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    ID              shift and go to state 40

    expression                     shift and go to state 49

state 29

    (3) statement -> expression_unary SEMICOLON .

    $end            reduce using rule 3 (statement -> expression_unary SEMICOLON .)
    R_FLOWERBRACE   reduce using rule 3 (statement -> expression_unary SEMICOLON .)
    ID              reduce using rule 3 (statement -> expression_unary SEMICOLON .)
    INT             reduce using rule 3 (statement -> expression_unary SEMICOLON .)
    FLOAT           reduce using rule 3 (statement -> expression_unary SEMICOLON .)
    WHILE           reduce using rule 3 (statement -> expression_unary SEMICOLON .)
    TYPE            reduce using rule 3 (statement -> expression_unary SEMICOLON .)
    PLUS_PLUS       reduce using rule 3 (statement -> expression_unary SEMICOLON .)
    MINUS_MINUS     reduce using rule 3 (statement -> expression_unary SEMICOLON .)


state 30

    (21) var_assign -> ID ASSIGN . expression
    (23) expression -> . expression MULTIPLY expression
    (24) expression -> . expression DIVIDE expression
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression MINUS expression
    (27) expression -> . expression L_SHIFT expression
    (28) expression -> . expression R_SHIFT expression
    (29) expression -> . expression MOD expression
    (30) expression -> . expression XOR expression
    (31) expression -> . expression AND expression
    (32) expression -> . expression OR expression
    (39) expression -> . INT
    (40) expression -> . FLOAT
    (41) expression -> . ID

    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    ID              shift and go to state 40

    expression                     shift and go to state 50

state 31

    (35) post -> ID PLUS_PLUS .

    SEMICOLON       reduce using rule 35 (post -> ID PLUS_PLUS .)


state 32

    (36) post -> ID MINUS_MINUS .

    SEMICOLON       reduce using rule 36 (post -> ID MINUS_MINUS .)


state 33

    (8) while_loop -> WHILE condition . block
    (9) while_loop -> WHILE condition . statement
    (17) block -> . L_FLOWERBRACE statement_multiple R_FLOWERBRACE
    (1) statement -> . var_assign SEMICOLON
    (2) statement -> . expression SEMICOLON
    (3) statement -> . expression_unary SEMICOLON
    (4) statement -> . while_loop
    (5) statement -> . declare_statement
    (6) statement -> . empty
    (21) var_assign -> . ID ASSIGN expression
    (23) expression -> . expression MULTIPLY expression
    (24) expression -> . expression DIVIDE expression
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression MINUS expression
    (27) expression -> . expression L_SHIFT expression
    (28) expression -> . expression R_SHIFT expression
    (29) expression -> . expression MOD expression
    (30) expression -> . expression XOR expression
    (31) expression -> . expression AND expression
    (32) expression -> . expression OR expression
    (39) expression -> . INT
    (40) expression -> . FLOAT
    (41) expression -> . ID
    (33) expression_unary -> . post
    (34) expression_unary -> . pre
    (8) while_loop -> . WHILE condition block
    (9) while_loop -> . WHILE condition statement
    (19) declare_statement -> . TYPE ID SEMICOLON
    (20) declare_statement -> . TYPE var_assign SEMICOLON
    (22) empty -> .
    (35) post -> . ID PLUS_PLUS
    (36) post -> . ID MINUS_MINUS
    (37) pre -> . PLUS_PLUS ID
    (38) pre -> . MINUS_MINUS ID

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for TYPE resolved as shift
  ! shift/reduce conflict for PLUS_PLUS resolved as shift
  ! shift/reduce conflict for MINUS_MINUS resolved as shift
    L_FLOWERBRACE   shift and go to state 53
    ID              shift and go to state 8
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    WHILE           shift and go to state 13
    TYPE            shift and go to state 14
    $end            reduce using rule 22 (empty -> .)
    R_FLOWERBRACE   reduce using rule 22 (empty -> .)
    PLUS_PLUS       shift and go to state 15
    MINUS_MINUS     shift and go to state 16

  ! ID              [ reduce using rule 22 (empty -> .) ]
  ! INT             [ reduce using rule 22 (empty -> .) ]
  ! FLOAT           [ reduce using rule 22 (empty -> .) ]
  ! WHILE           [ reduce using rule 22 (empty -> .) ]
  ! TYPE            [ reduce using rule 22 (empty -> .) ]
  ! PLUS_PLUS       [ reduce using rule 22 (empty -> .) ]
  ! MINUS_MINUS     [ reduce using rule 22 (empty -> .) ]

    block                          shift and go to state 51
    statement                      shift and go to state 52
    var_assign                     shift and go to state 2
    expression                     shift and go to state 3
    expression_unary               shift and go to state 4
    while_loop                     shift and go to state 5
    declare_statement              shift and go to state 6
    empty                          shift and go to state 7
    post                           shift and go to state 11
    pre                            shift and go to state 12

state 34

    (10) condition -> L_PAREN . expression relop expression R_PAREN
    (23) expression -> . expression MULTIPLY expression
    (24) expression -> . expression DIVIDE expression
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression MINUS expression
    (27) expression -> . expression L_SHIFT expression
    (28) expression -> . expression R_SHIFT expression
    (29) expression -> . expression MOD expression
    (30) expression -> . expression XOR expression
    (31) expression -> . expression AND expression
    (32) expression -> . expression OR expression
    (39) expression -> . INT
    (40) expression -> . FLOAT
    (41) expression -> . ID

    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    ID              shift and go to state 40

    expression                     shift and go to state 54

state 35

    (19) declare_statement -> TYPE ID . SEMICOLON
    (21) var_assign -> ID . ASSIGN expression

    SEMICOLON       shift and go to state 55
    ASSIGN          shift and go to state 30


state 36

    (20) declare_statement -> TYPE var_assign . SEMICOLON

    SEMICOLON       shift and go to state 56


state 37

    (37) pre -> PLUS_PLUS ID .

    SEMICOLON       reduce using rule 37 (pre -> PLUS_PLUS ID .)


state 38

    (38) pre -> MINUS_MINUS ID .

    SEMICOLON       reduce using rule 38 (pre -> MINUS_MINUS ID .)


state 39

    (23) expression -> expression MULTIPLY expression .
    (23) expression -> expression . MULTIPLY expression
    (24) expression -> expression . DIVIDE expression
    (25) expression -> expression . PLUS expression
    (26) expression -> expression . MINUS expression
    (27) expression -> expression . L_SHIFT expression
    (28) expression -> expression . R_SHIFT expression
    (29) expression -> expression . MOD expression
    (30) expression -> expression . XOR expression
    (31) expression -> expression . AND expression
    (32) expression -> expression . OR expression
